--- a/Git.wiki
+++ b/Git.wiki
@@ -1,4 +1,5 @@
-CRLF/LF problem, check [http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf this] out.
+* CRLF/LF problem, check [http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf this] out.
+* Viewing the Commit History, [http://progit.org/book/ch2-3.html here].
 -----
 %title Git - Covi
-Last Modified: October 03, 2011 12:51:25 
+Last Modified: October 03, 2011 13:10:09 
