--- a/Git.wiki
+++ b/Git.wiki
@@ -2,6 +2,9 @@
 
 * CRLF/LF problem, check [http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf this] out.
 * Viewing the Commit History, [http://progit.org/book/ch2-3.html here].
+
+== Frequently Used Commands ==
+* git show --pretty="format:" --name-only
 -----
 %title Git - Covi
-Last Modified: October 03, 2011 13:57:23 
+Last Modified: October 03, 2011 14:00:31 
