--- a/Git.wiki
+++ b/Git.wiki
@@ -2,9 +2,12 @@
 
 * CRLF/LF problem, check [http://stackoverflow.com/questions/1967370/git-replacing-lf-with-crlf this] out.
 * Viewing the Commit History, [http://progit.org/book/ch2-3.html here].
+* Alias: http://progit.org/book/ch2-7.html
 
 == Frequently Used Commands ==
-* git show --pretty="format:" --name-only
+* git show --pretty="format:" --name-only % alias lf (last files)
+* git commit -a -m % alias comm
+    * git comm 'MSG' --amend
 -----
 %title Git - Covi
-Last Modified: October 03, 2011 14:00:31 
+Last Modified: October 03, 2011 14:06:14 
