--- a/Git.wiki
+++ b/Git.wiki
@@ -1,4 +1,4 @@
-I automatically push my entire wiki to https://github.com/concretevitamin/personal-wiki.
+I automatically push my entire wiki to https://github.com/concretevitamin/personal-wiki. Check out how [[About][Here]].
 
 [http://progit.org/book/ Pro Git], THE tutorial.
 
@@ -12,4 +12,4 @@ I automatically push my entire wiki to https://github.com/concretevitamin/person
     * git comm 'MSG' --amend
 -----
 %title Git - Covi
-Last Modified: October 03, 2011 14:11:55 
+Last Modified: October 03, 2011 15:00:55 
