--- a/About.wiki
+++ b/About.wiki
@@ -8,10 +8,17 @@ Git and Github. Generally, after I editted an existed .wiki file or created a ne
 # git comm 'MESSAGE' % or sometimes git comm 'MESSAGE' --amend
 # git push
 
-And boom. My files are instantaneously tracked and uploaded.
+And boom. My files are instantaneously tracked and uploaded to Github. To upload them to my website server requires several slightly different commands:
 
-There is one major drawback with this combination of tools: Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
+# git add and git comm as above
+# git push myserver master
+# (on my server) git reset --hard
+
+There is two major drawback with this combination of tools: 
+
+# Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
+# The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.
 
 -----
 %title About - Covi
-Last Modified: October 03, 2011 14:48:59 
+Last Modified: October 04, 2011 13:51:39 
