--- a/About.wiki
+++ b/About.wiki
@@ -14,11 +14,11 @@ And boom. My files are instantaneously tracked and uploaded to Github. To upload
 # git push myserver master
 # (on my server) git reset --hard
 
-There is two major drawback with this combination of tools: 
+There are two major drawbacks with this combination of tools: 
 
 # Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
 # The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.
 
 -----
 %title About - Covi
-Last Modified: October 04, 2011 13:51:39 
+Last Modified: October 04, 2011 13:57:27 
