--- a/index.wiki
+++ b/index.wiki
@@ -10,7 +10,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 [[My Online Profile]]: This page contains what I share online.
 
 == ME ==
-* [[me][About Me]]. [[About][About this Wiki]].
+* [[me][About Me]]
 * [[Reading][My Reading]]
 * [[Movies][Movies I've watched]]
 * [[music][Music I love]]
@@ -34,7 +34,8 @@ The Wiki records various aspects of my life and presents some of my interests.
   * [[Vimperator]], a Firefox extension that renders browsing utimately pleasant.
 * [[Filezilla]]
 * [[Irssi]], a solid [http://en.wikipedia.org/wiki/Internet_Relay_Chat IRC] client.
-* [[Git]]. I'm learning this powerful VCS.
+* [[Git]]. I'm learning this powerful VCS. 
+  - Check out how I use Git to maintain this Wiki here: [[About]].
 
 == Devices ==
 * [[Kindle]]. I am an ardent Kindle advocate.
@@ -48,4 +49,4 @@ Besides, I use many Web 2.0 applications that make life easier.
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: October 03, 2011 14:15:41 
+Last Modified: October 04, 2011 18:29:40 
