--- a/index.wiki
+++ b/index.wiki
@@ -3,11 +3,9 @@
 
 My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). My usual nickname on the Web is *Covi*. If you need to contact me, my email is near the end of this page.
 
-This personal Wiki is constructed and maintained with [http://www.vim.org/ Vim] + [http://code.google.com/p/vimwiki/ Vimwiki], which mean I can add something to my personal knowledge base within no more than 10 additional keystrokes, and yes, no mouse needed.
+This personal Wiki is constructed and maintained with [http://www.vim.org/ Vim] + [http://code.google.com/p/vimwiki/ Vimwiki] + [http://git-scm.com Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed!
 
 The Wiki records various aspects of my life and presents some of my interests.
-
-[[My Online Profile]]: This page contains what I share online.
 
 == ME ==
 * [[me][About Me]]
@@ -49,4 +47,4 @@ Besides, I use many Web 2.0 applications that make life easier.
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: October 04, 2011 18:29:40 
+Last Modified: October 04, 2011 18:35:52 
