--- a/About.wiki
+++ b/About.wiki
@@ -2,9 +2,9 @@
 
 This entire Wiki is maintained with several fantastic tools. The primary ones are [http://code.google.com/p/vimwiki/ Vimwiki] and [http://www.vim.org/ Vim]. Some supplementary tools those make life eaiser (or those insidiously move me toward the purely technical end...) are [http://www.dropbox.com/ Dropbox], [http://git-scm.com/ Git], and [https://github.com/ Github].
 
-Dropbox. Dropbox enables me to crowd-store my files. Leaving important files solely in your hard drive is a dangerous decision. I lost a laptop along with tons of invaluable files once. Dropbox solves the problem.
+*Dropbox*. Dropbox enables me to crowd-store my files. Leaving important files solely in your hard drive is a dangerous decision. I lost a laptop along with tons of invaluable files once. Dropbox solves the problem.
 
-Git and Github. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
+*Git and Github*. Generally, after I editted an existed .wiki file or created a new one, I did the following commands to make sure Git tracks my progress and push the files to Github:
 
     git add . % if I created new files<br />
     git comm 'MESSAGE' % or sometimes git comm 'MESSAGE' --amend<br />
@@ -19,8 +19,8 @@ And boom. My files are instantaneously tracked and uploaded to Github. To upload
 There are two major drawbacks with this combination of tools: 
 
 # Github does not correctly regonize Vimwiki format/markup. The effect is if I read my .wiki files on Github, they can look rather messy.
-# The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.
+# ~~The manipulation seems tedious. As my knowledge of Git and Linux accumulate, I expect a more elegant solution in the future.~~ *Solution*: run `ssh user@domain.com ./git` directly in my Git Bash, and the nice little shell script `git` I wrote does the `cd` and `reset --hard` stuff.
 
 -----
 %title About - Covi
-Last Modified: October 04, 2011 18:29:36 
+Last Modified: October 05, 2011 10:38:25 
