--- a/index.wiki
+++ b/index.wiki
@@ -25,7 +25,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 * [[Microeconomics]].
 * [[Macroeconomics]].
 * [[AP Computer Science]]; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-* Computer Science: [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]].
+* Computer Science: [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. [[NOIP Notes][Some basic notes]]. [[Combinatorics]].
 
 == Tools ==
 * [[Vim]]
@@ -48,4 +48,4 @@ Besides, I use many Web 2.0 applications that make life easier.
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: October 05, 2011 10:36:03 
+Last Modified: October 09, 2011 10:15:20 
