--- a/NOIP Notes.wiki
+++ b/NOIP Notes.wiki
@@ -11,3 +11,10 @@ CPU
 进制转换
 - k 转 10: 整数部分和小数部分直接乘 k 的次幂
 - 10 转 k: 整数部分做除法逆向取余, 小数部分乘 k 正向取整数部分
+
+赛事
+- NOI 比 IOI 早 5 年举行
+
+硬件
+- 随机存取存储器 RAM：断电不能保存数据
+- 只读存储器 ROM：断电可以保存数据
