--- a/music.wiki
+++ b/music.wiki
@@ -1,4 +1,9 @@
 = Music I love =
+_This page will be continually updated as I listen to some of the best impulses of this world..._
+
+Genres: Jazz and Chinese Pop.
+
+Artists: Miles Davis, John Coltrane.
 
 == Pop Songs (Which I usually sing at KTV) == 
 # 落花流水, 陈奕迅.  
@@ -14,4 +19,4 @@
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: Mar 25, 2011 15:01:12 
+Last Modified: October 14, 2011 14:13:10 
