--- a/NOIP Notes.wiki
+++ b/NOIP Notes.wiki
@@ -19,12 +19,19 @@ CPU
 - 随机存取存储器 RAM：断电不能保存数据
 - 只读存储器 ROM：断电可以保存数据
 
-原码
+原码, 反码, 补码
+http://www.hackbase.com/tech/2009-07-27/54264.html
 - 最高有效位当成符号位，0 为 正，1 为负
-
-反码
-- 正数的反码等于其原码，无需转换
+- 正数的原、反、补一样
 - 负数的反码：符号位不动，其余各位取反
+- 负数的补码：其反码+1
 
-补码
-- 数字 a 的补码即为 -a
+基数排序
+- 将所有待比较数值(正整数)统一为同样的数位长度,数位较短的数前面补零. 然后, 从最低位开始, 依次进行一次排序.这样从最低位排序一直到最高位排序完成以后, 数列就变成一个有序序列.
+- 非原地排序
+
+稳定排序: 合并, 插入, 冒泡
+非稳定排序: 堆, 选择, 希尔, 快排(说是 depends，但可以认为是 unstable)
+
+Java
+- 既可被解释，也可被编译
