--- a/music.wiki
+++ b/music.wiki
@@ -3,7 +3,7 @@ _This page will be continually updated as I listen to some of the best impulses 
 
 Genres: Jazz and Chinese Pop.
 
-Artists: Miles Davis, John Coltrane.
+Artists: Miles Davis, John Coltrane, 陈奕迅 (Eason Chan)
 
 == Pop Songs (Which I usually sing at KTV) == 
 # 落花流水, 陈奕迅.  
@@ -19,4 +19,4 @@ Artists: Miles Davis, John Coltrane.
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: October 14, 2011 14:13:10 
+Last Modified: October 14, 2011 19:44:54 
