--- a/NOIP Notes.wiki
+++ b/NOIP Notes.wiki
@@ -30,12 +30,13 @@ http://www.hackbase.com/tech/2009-07-27/54264.html
 - 将所有待比较数值(正整数)统一为同样的数位长度,数位较短的数前面补零. 然后, 从最低位开始, 依次进行一次排序.这样从最低位排序一直到最高位排序完成以后, 数列就变成一个有序序列.
 - 非原地排序
 
-稳定排序: 合并, 插入, 冒泡
+稳定排序: 合并, 插入, 冒泡, 基数
 非稳定排序: 堆, 选择, 希尔, 快排(说是 depends，但可以认为是 unstable)
 
 Java
 - 既可被解释，也可被编译
 
-cpu 最早谁发明？ 位数含义
-ram 计算机内存
+内存分类
+- 易失性：RAM
+- 不易失性：ROM, 闪存
 
