--- a/index.wiki
+++ b/index.wiki
@@ -1,5 +1,12 @@
 = Welcome to Covi's Personal Knowledge Base Wiki! =
 
+dasdasdasdasd
+..$E = mc^2$
+
+{{$
+\sum_{i=1}^N a_i^2 = \infty
+}}$
+
 [[http://geotakucovi.com/avatar.jpg|Avatar]]
 
 My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). My usual nickname on the Web is *Covi*. If you need to contact me, my email is near the end of this page.
