--- a/Math.wiki
+++ b/Math.wiki
@@ -3,7 +3,7 @@
 *Read List*
 * http://math.stackexchange.com/questions/11002/cn-p-even-or-odd
 
-[[calculus][Calculus]]
+[[calculus][Calculus]] [[Combinatorics]]
 
 *Functions*
 * For a function _f_, `x |-> y` means `f(x) = y`. (\mapsto 映射到)
@@ -24,4 +24,4 @@
 -------
 %title Math - Covi
 Date Created: Feb 19, 2011 9:03:42<br />
-Last Modified: August 28, 2011 23:08:35 
+Last Modified: October 22, 2011 21:55:47 
