--- a/Combinatorics.wiki
+++ b/Combinatorics.wiki
@@ -2,9 +2,9 @@
 
 == Special Numbers ==
 Bell Number
-- number of non-empty partitions of n elements
+- number of different partitions of n elements
 - http://mathworld.wolfram.com/BellNumber.html
-- strong resemblance to 2nd Kind Stirling Number: B_n = sum{S(n, k)}.
+- strong resemblance to 2nd Kind Stirling Number: $B_n = \sum_{k = 0}^{n} S(n, k)$.
 - Calculation: Bell's Triangle
 
 Eulerian Number E(n, k)
@@ -17,4 +17,4 @@ Eulerian Number E(n, k)
 
 -----
 %title Combinatorics - Covi
-Last Modified: October 22, 2011 21:49:09 
+Last Modified: October 22, 2011 22:04:02 
