--- a/Graph Theory and Algorithms.wiki
+++ b/Graph Theory and Algorithms.wiki
@@ -4,6 +4,9 @@
 Minimum Spanning Tree: [[Prim]]. [[Kruskal]].
 
 Strongly connected: A directed graph is called strongly connected if there is a path from each vertex in the graph to every other vertex.
+
+= Graph Theory Problems =
+[[mathematician-language problem]]  [[friends problem]]
 -----
 %title Graphy Theory and Algorithms - Covi
-Last Modified: October 15, 2011 10:16:01 
+Last Modified: October 22, 2011 22:18:35 
