--- a/index.wiki
+++ b/index.wiki
@@ -2,6 +2,8 @@
 
 [[http://geotakucovi.com/avatar.jpg|Avatar]]
 
+Lately (From Oct 31) I've been spending 5hrs+ in Library programming (_or hoping to program_) every day, and 3hrs in classroom every night. (_OMG I HAVE COLLEGE APPLICATIONS..._)
+
 My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). My usual nickname on the Web is *Covi*. If you need to contact me, my email is near the end of this page.
 
 This personal Wiki is constructed and maintained with [http://www.vim.org/ Vim] + [http://code.google.com/p/vimwiki/ Vimwiki] + [http://git-scm.com Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed!
@@ -48,4 +50,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: October 22, 2011 21:54:59 
+Last Modified: November 03, 2011 13:11:22 
