--- a/music.wiki
+++ b/music.wiki
@@ -9,6 +9,7 @@ _I listen to some of the best impulses of this world..._
 
 == Jazz ==
 * _Autumn Leaves_ in Cannonball Adderley's _Somethin' Else_ is the *most impressive* jazz piece I've ever heard! 
+* John Coltrane's _Moment's Notice_: http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0
 
 == Pop Songs (Which I usually sing at KTV) == 
 # 落花流水, 陈奕迅.  
@@ -25,4 +26,4 @@ _I listen to some of the best impulses of this world..._
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 13, 2011 22:37:24 
+Last Modified: November 14, 2011 09:47:28 
