--- a/Movies.wiki
+++ b/Movies.wiki
@@ -44,7 +44,10 @@
 
 == Nov, 2011 ==
 * _American Gangster_, 2007.
+* _Harry Potter and the Deathly Hallows Part 2_, 2011.
+* _Harry Potter and the Deathly Hallows Part 1_, 2010.
+* _Harry Potter and the Half Blood Prince_, 2009.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: November 07, 2011 09:45:55 
+Last Modified: November 21, 2011 09:59:56 
