--- a/index.wiki
+++ b/index.wiki
@@ -2,9 +2,7 @@
 
 [[http://geotakucovi.com/avatar.jpg|Avatar]]
 
-``The greater danger for most of us lies not in setting our aim too high
-and falling short; but in setting our aim too low, and achieving our
-mark.''
+``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.''
 
 My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). My usual nickname on the Web is *Covi*. If you need to contact me, my email is near the end of this page.
 
@@ -16,13 +14,14 @@ The Wiki records various aspects of my life and presents some of my interests.
 * [[me][About Me]]
 * [[Reading][My Reading]]
 * [[Movies][Movies I've watched]]
-* [[music][Music I love]]
-* [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.)
+* [[music][Music I love]]. Jazz. Cantonese Pop. Albums and Pieces.
+<!-- [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.) -->
   
 == Serious (or not so serious?) Stuff ==
 * [[Math]], notes on math.
   * [[calculus][Calculus]], notes on calculus.
   * [[Combinatorics]], notes/problems/solutions/questions on combinatorics.
+  * [[Modeling]].
 * [[LaTeX]], notes on !LaTeX.
 * [[Linux Notes][Notes on Linux]].
 * [[Physics]].
@@ -52,4 +51,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 14, 2011 08:50:15 
+Last Modified: November 20, 2011 22:38:45 
