--- a/index.wiki
+++ b/index.wiki
@@ -22,14 +22,18 @@ The Wiki records various aspects of my life and presents some of my interests.
   * [[calculus][Calculus]], notes on calculus.
   * [[Combinatorics]], notes/problems/solutions/questions on combinatorics.
   * [[Modeling]].
+* Computer Science
+  * [[NOIP 2011 Prep][My Preparation for NOIP 2011]].
+  * [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. 
+  * [[NOIP Notes][Some basic notes]]. 
+  * [[Graph Theory and Algorithms]].
+  * [[AP Computer Science]]; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
 * [[LaTeX]], notes on !LaTeX.
 * [[Linux Notes][Notes on Linux]].
 * [[Physics]].
 * [[Statistics]].
 * [[Microeconomics]].
 * [[Macroeconomics]].
-* [[AP Computer Science]]; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
-* Computer Science: [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. [[NOIP Notes][Some basic notes]]. [[Graph Theory and Algorithms]]. [[NOIP 2011 Prep][My Preparation for NOIP 2011]].
 
 == Tools ==
 * [[Vim]]
@@ -51,4 +55,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 20, 2011 22:38:45 
+Last Modified: November 21, 2011 10:08:22 
