--- a/index.wiki
+++ b/index.wiki
@@ -4,9 +4,9 @@
 
 ``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.''
 
-My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). My usual nickname on the Web is *Covi*. If you need to contact me, my email is near the end of this page.
+Hi! My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). 
 
-This personal Wiki is constructed and maintained with [http://www.vim.org/ Vim] + [http://code.google.com/p/vimwiki/ Vimwiki] + [http://git-scm.com Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed!
+This personal Wiki is constructed and maintained with [http://www.vim.org/ Vim] + [http://code.google.com/p/vimwiki/ Vimwiki] + [http://git-scm.com Git] and several other tools, which enable me to add something to my personal knowledge base within no more than 10 manipulative keystrokes, and yes, no mouse needed! Check out more here: [[About]].
 
 The Wiki records various aspects of my life and presents some of my interests.
 
@@ -55,4 +55,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 21, 2011 10:08:22 
+Last Modified: November 21, 2011 10:10:54 
