--- a/index.wiki
+++ b/index.wiki
@@ -2,7 +2,7 @@
 
 [[http://geotakucovi.com/avatar.jpg|Avatar]]
 
-``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.''
+``The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.'' -- Michelangelo Buonarroti
 
 Hi! My name is *Zongheng Yang*, a high school senior in [http://www.shenzhong.net Shenzhen Middle School], Shenzhen, China ([http://maps.google.com/maps?q=shenzhen,+china&hl=en&client=firefox-a&gl=us&z=10&vpsrc=0 Google Maps]). 
 
@@ -15,7 +15,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 * [[Reading][My Reading]]
 * [[Movies][Movies I've watched]]
 * [[music][Music I love]]. Jazz. Cantonese Pop. Albums and Pieces.
-<!-- [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.) -->
+- [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.) -->
   
 == Serious (or not so serious?) Stuff ==
 * [[Math]], notes on math.
@@ -23,6 +23,7 @@ The Wiki records various aspects of my life and presents some of my interests.
   * [[Combinatorics]], notes/problems/solutions/questions on combinatorics.
   * [[Modeling]].
 * Computer Science
+  * [[ProjectEuler][My Project Euler Codes]].
   * [[NOIP 2011 Prep][My Preparation for NOIP 2011]].
   * [[Sol To DP Book][Solutions to Problems in The Art and Theory of Dynamic Programming]]. 
   * [[NOIP Notes][Some basic notes]]. 
@@ -55,4 +56,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 21, 2011 10:10:54 
+Last Modified: November 23, 2011 08:15:22 
