--- a/index.wiki
+++ b/index.wiki
@@ -15,7 +15,7 @@ The Wiki records various aspects of my life and presents some of my interests.
 * [[Reading][My Reading]]
 * [[Movies][Movies I've watched]]
 * [[music][Music I love]]. Jazz. Cantonese Pop. Albums and Pieces.
-- [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.) -->
+<!-- [[Pastebin][My Pastebin for Random Stuff]] (Only for personal use; not much value here.) -->
   
 == Serious (or not so serious?) Stuff ==
 * [[Math]], notes on math.
@@ -56,4 +56,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 23, 2011 08:15:22 
+Last Modified: November 23, 2011 09:50:11 
