--- a/Movies.wiki
+++ b/Movies.wiki
@@ -47,7 +47,8 @@
 * _Harry Potter and the Deathly Hallows Part 2_, 2011.
 * _Harry Potter and the Deathly Hallows Part 1_, 2010.
 * _Harry Potter and the Half Blood Prince_, 2009.
+* _The Departed_, 2006. (U.S. version of _Internal Affairs_)
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: November 21, 2011 09:59:56 
+Last Modified: November 24, 2011 09:56:38 
