--- a/index.wiki
+++ b/index.wiki
@@ -29,6 +29,7 @@ The Wiki records various aspects of my life and presents some of my interests.
   * [[NOIP Notes][Some basic notes]]. 
   * [[Graph Theory and Algorithms]].
   * [[AP Computer Science]]; In Fall 2011 I will be a TA for the AP Computer Science Class. Here contains notes and resources for my fellow classmates.
+  * [[Python Notes]]. I find learning Python a great break from college applications.
 * [[LaTeX]], notes on !LaTeX.
 * [[Linux Notes][Notes on Linux]].
 * [[Physics]].
@@ -56,4 +57,4 @@ http://geotakucovi.com/mail0.png
 %title Covi's Personal Knowledge Base Wiki
 Created Date: Jan 31, 2011.<br />
 <!-- Put cursor on "F" and press <F5> to renew the datestamp. -->
-Last Modified: November 23, 2011 09:50:11 
+Last Modified: November 25, 2011 18:34:32 
