--- a/wordcount.wiki
+++ b/wordcount.wiki
@@ -1,5 +1,5 @@
 = wordcount.py and Some Interesting Results =
-`wordcount.py` is a tiny Python I wrote for fun, that counted the most frequent words in an article and their occurances. It supports arbitrary number of most frequent words.
+`wordcount.py` is a tiny Python program I wrote for fun, that counted the most frequent words in an article and their occurances. It supports arbitrary number of most frequent words.
 
 The code, along with some sample results, can be found here: [https://github.com/concretevitamin/wordcount Github].
 
@@ -66,4 +66,4 @@ Huge difference from all other three articles!
 ------
 %title wordcount.py and Some Interesting Results - Covi
 Created Date: November 26, 2011 10:34:46<br />
-Last Modified: November 26, 2011 10:53:31 
+Last Modified: November 26, 2011 11:02:07 
