--- a/music.wiki
+++ b/music.wiki
@@ -21,9 +21,11 @@ _I listen to some of the best impulses of this world..._
 # 你那么爱他, 李圣杰. _(though I don't understand the lyrics)_
 # 新不了情.
 # 如果我变成回忆, TANK.
-# 爱是, 若兰.
+# 爱没有假如, 若兰. [[AiMeiYouJiaRu][Lyrics]]
+# 哎呀咿呀, 陈奕迅.
+# 孤独患者, 陈奕迅. [[GuDuHuanZhe][Lyrics]]
 
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 14, 2011 09:47:28 
+Last Modified: November 28, 2011 22:56:21 
