--- a/Movies.wiki
+++ b/Movies.wiki
@@ -48,7 +48,10 @@
 * _Harry Potter and the Deathly Hallows Part 1_, 2010.
 * _Harry Potter and the Half Blood Prince_, 2009.
 * _The Departed_, 2006. (U.S. version of _Internal Affairs_)
+
+== Dec, 2011 ==
+* _The Debt_, 2011.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: November 24, 2011 09:56:38 
+Last Modified: December 04, 2011 14:39:11 
