--- a/music.wiki
+++ b/music.wiki
@@ -8,7 +8,7 @@ _I listen to some of the best impulses of this world..._
 *Artists*: Miles Davis, John Coltrane, 陈奕迅 (Eason Chan), Cannonball Adderley, Leehom Wong (王力宏)
 
 == Jazz ==
-* _Autumn Leaves_ in Cannonball Adderley's _Somethin' Else_ is the *most impressive* jazz piece I've ever heard! 
+* _Autumn Leaves_ in Cannonball Adderley's _Somethin' Else_ is the *most impressive* jazz piece I've ever heard! Listen also: In San Francisco.
 * John Coltrane's _Moment's Notice_: http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0
 
 == Pop Songs (Which I usually sing at KTV) == 
@@ -28,4 +28,4 @@ _I listen to some of the best impulses of this world..._
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: November 28, 2011 22:56:21 
+Last Modified: December 07, 2011 22:32:25 
