--- a/Movies.wiki
+++ b/Movies.wiki
@@ -51,7 +51,8 @@
 
 == Dec, 2011 ==
 * _The Debt_, 2010.
+* _The Machinist_, 2004.
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: December 04, 2011 14:41:50 
+Last Modified: December 08, 2011 09:27:16 
