--- a/music.wiki
+++ b/music.wiki
@@ -10,6 +10,7 @@ _I listen to some of the best impulses of this world..._
 == Jazz ==
 * _Autumn Leaves_ in Cannonball Adderley's _Somethin' Else_ is the *most impressive* jazz piece I've ever heard! Listen also: In San Francisco.
 * John Coltrane's _Moment's Notice_: http://www.last.fm/music/John+Coltrane/+videos/+1-FMVUWoFHwB0
+* Cannonball Addeley: _This Here_, _Spontaneous Combustion_.
 
 == Pop Songs (Which I usually sing at KTV) == 
 # 落花流水, 陈奕迅.  
@@ -28,4 +29,4 @@ _I listen to some of the best impulses of this world..._
 -------
 %title Music I love - Covi
 Created Date: Feb 12, 2011 10:11:39<br />
-Last Modified: December 07, 2011 22:32:25 
+Last Modified: December 16, 2011 09:03:07 
