--- a/Reading.wiki
+++ b/Reading.wiki
@@ -21,6 +21,9 @@ These books and short passages are mostly read on [[Kindle][My Kindle]]. Check t
 == Fantansy ==
 * [[A Clash of Kings]] (2nd of the series [[A Song of Ice and Fire]]) by George R. R. Martin; finished on Mid Autumn Festival, Sep 12, 2011.
 
+== Poetry ==
+* _Ulysses_, by Alfred, Lord Tennyson
+
 -------
 %title My Reading - Covi 
-Last Modified: December 01, 2011 23:09:00 
+Last Modified: December 26, 2011 19:58:48 
