--- a/Movies.wiki
+++ b/Movies.wiki
@@ -56,7 +56,8 @@
 == Jan, 2012 ==
 * _Mission Impossible: Ghost Protocol_, 2011.
 * _Moneyball_, 2011.
+* _K-PAX_, 2001. (AP En Lit final project!)
 ------
 %title Movies I've Watched
 Created Date: Feb 09, 2011 0:13:47<br />
-Last Modified: January 04, 2012 00:06:18 
+Last Modified: January 08, 2012 10:07:40 
