--- a/gcc.wiki
+++ b/gcc.wiki
@@ -7,11 +7,11 @@
 }}}
 
 - `-c` generates `.o`.
-- `-S` generates `.s`, compiled assembly source codes.
+- `-S` generates `.s`, compiled "object files" (e.g., assembly source codes under Windows).
 
 = Make and Makefiles =
 - http://mrbook.org/tutorials/make/
 -----
 %title Notes On gcc/g++ - Covi
 Created Date: January 20, 2012 20:14:02<br />
-Last Modified: January 20, 2012 20:26:31 
+Last Modified: January 20, 2012 20:29:25 
