--- a/gcc.wiki
+++ b/gcc.wiki
@@ -1,9 +1,13 @@
-= --help =
+= Options =
 {{{
   -E                       Preprocess only; do not compile, assemble or link
   -S                       Compile only; do not assemble or link
   -c                       Compile and assemble, but do not link
   -o <file>                Place the output into <file>
+  
+-idirafter dir
+    Search dir for header files, but do it after all directories specified with -I and the standard system directories have been exhausted. dir is treated as a system include directory. 
+
 }}}
 
 - `-c` generates `.o`.
@@ -14,4 +18,4 @@
 -----
 %title Notes On gcc/g++ - Covi
 Created Date: January 20, 2012 20:14:02<br />
-Last Modified: January 20, 2012 20:29:25 
+Last Modified: January 21, 2012 15:24:39 
